# navylinks

./: app.py  pyproject.toml  requirements.txt  st_functions.py  streamlit_app.py
template/: index.html
