[tool.poetry]
name = "navylinks"
version = "0.1.0"
description = ""
authors = ["hegerjl12 <jared.heger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.3"
streamlit = "^1.26.0"
numpy = "^1.25.2"
gunicorn = "^21.2.0"
avwx-engine = "^1.8.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
